operators/prometheus-operator/4.1.0/CHANGELOG.md
---
title: Changelog
---

**Important:**
*for the complete changelog, please refer to the website*



## [prometheus-operator-4.1.0](https://github.com/truecharts/charts/compare/prometheus-operator-4.0.0...prometheus-operator-4.1.0) (2024-01-05)

### Chore



- update helm chart kube-prometheus-stack to 55.6.0 by renovate ([#16897](https://github.com/truecharts/charts/issues/16897))


## [prometheus-operator-4.0.0](https://github.com/truecharts/charts/compare/prometheus-operator-3.1.7...prometheus-operator-4.0.0) (2024-01-02)

### Feat



- move to upstream ([#16822](https://github.com/truecharts/charts/issues/16822))


## [prometheus-operator-3.1.7](https://github.com/truecharts/charts/compare/prometheus-operator-3.1.6...prometheus-operator-3.1.7) (2024-01-02)

### Chore



- force bump to ensure up-to-date catalogs


## [prometheus-operator-3.1.6](https://github.com/truecharts/charts/compare/prometheus-operator-3.1.5...prometheus-operator-3.1.6) (2024-01-02)

### Chore



- fix some refs ([#16749](https://github.com/truecharts/charts/issues/16749))


## [prometheus-operator-3.1.5](https://github.com/truecharts/charts/compare/prometheus-operator-3.1.4...prometheus-operator-3.1.5) (2024-01-01)

### Chore



- increase common version for oci fixes


## [prometheus-operator-3.1.4](https://github.com/truecharts/charts/compare/prometheus-operator-3.1.3...prometheus-operator-3.1.4) (2024-01-01)

### Chore



- ensure everything is bumped into oci


## [prometheus-operator-3.1.3](https://github.com/truecharts/charts/compare/prometheus-operator-3.1.0...prometheus-operator-3.1.3) (2024-01-01)

### Chore



- bump all charts for OCI test push

- move everything to consume OCI-hosted common-chart dependency

- update container image common to v17.2.19[@4ebb688](https://github.com/4ebb688) by renovate ([#16733](https://github.com/truecharts/charts/issues/16733))

- update container image common to v17.2.18[@085ba3c](https://github.com/085ba3c) by renovate ([#16732](https://github.com/truecharts/charts/issues/16732))

- standardize ./img references ([#16704](https://github.com/truecharts/charts/issues/16704))

- lints some docs, uses front-matter instead of # h1, and fix list items in changelog ([#16589](https://github.com/truecharts/charts/issues/16589))


## [prometheus-operator-3.1.2](https://github.com/truecharts/charts/compare/prometheus-operator-3.1.0...prometheus-operator-3.1.2) (2024-01-01)

### Chore



- bump all charts for OCI test push

- move everything to consume OCI-hosted common-chart dependency

- update container image common to v17.2.18[@085ba3c](https://github.com/085ba3c) by renovate ([#16732](https://github.com/truecharts/charts/issues/16732))

- standardize ./img references ([#16704](https://github.com/truecharts/charts/issues/16704))

- lints some docs, uses front-matter instead of # h1, and fix list items in changelog ([#16589](https://github.com/truecharts/charts/issues/16589))
## [prometheus-operator-3.1.0](https://github.com/truecharts/charts/compare/prometheus-operator-3.0.1...prometheus-operator-3.1.0) (2023-12-30)

